# pricing-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  captcha_moba.html  moba_catalog.html  pyproject.toml  zen.plan.md
agents/: discovery.py
alembic/: env.py
app/: __init__.py  main.py
docs/: BI.ModelDemand.md  PRD.md  RELEASE_NOTES.md  TechDesign.AgentsMarketDemand.md  TechDesign.CompetitorFTPImport.md  TechDesign.CompetitorMatching.md  agents-market-research.md  agents.md  architecture.md  constitution.md  plan.md  price-strategies.md  topcontrol_schema.md
infra/: docker-compose.yml
playwright_diag_mobile/: report.json
playwright_dump/: page_0.html  page_1.html
samples/: README_IMPORT.txt  agent_requests.http  moba_catalog.html
scripts/: diagnose_playwright.py
tasks/: S0.1-init-repo.md  S0.2-dev-env.md  S0.3-docker-dev.md  S0.4-ci.md  S1.1-fastapi-skeleton.md  S1.2-db-models.md  S1.3-alembic-initial.md  S1.4-logging.md  S1.5-architecture-doc.md  S1.6-integration-tests.md  __init__.py  import_competitor_ftp.py  import_topcontrol_products_db.py  match_competitor_ftp.py  update_smartphone_releases.py
tests/: conftest.py  test_bi_api.py  test_competitor_ftp_parser.py  test_competitor_importer.py  test_competitor_matching.py  test_db_smoke.py  test_demand_service.py  test_health.py  test_logging.py  test_matching.py  test_models.py  test_one_c_exporter.py  test_pricing.py  test_proxy_client.py  test_recommendation_api.py  test_recommendation_history.py  test_reports_api.py  test_scrape_tasks.py  test_scraper_parsers.py  test_telegram_api.py  (+4 more)
(+96 files in other folders)
