[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-service"
version = "0.1.0"
description = "Умное ценообразование Master Mobile (FastAPI + SQLAlchemy + Alembic)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "psycopg2-binary>=2.9.9",
    "dbfread>=2.0.7",
    "httpx>=0.27.0",
    "openai>=1.51.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "black>=24.4.0",
    "dbf>=0.99.9",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.setuptools.packages.find]
include = ["app"]
exclude = ["tests", "alembic", "infra", "docs", "tasks"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "UP", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
